[package]
name = "css-loader-macros"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Exe Zulliger <exe@thepeak.de>"
]
description = "A simple macro to include style files in Rust using CSS Modules-like scoping"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1"
cssparser = "0.29"
syn = "1"
proc-macro2 = "1"
rsass = "0.25"